--- a/assets/style.css
+++ b/assets/style.css
@@ -2,6 +2,6 @@
     margin: 0%;
     padding: 0%;
     border: 0%;
-background-color: gray;
+background-color: rgb(76, 92, 76);
     font-family: 'Roboto', sans-serif;
 }
